ENTRYSTORE-949: Fix DNS rebinding and SSRF vulnerabilities in proxy endpoints
- Add URL validation: reject non-http/https schemes and embedded credentials
- Refactor isBlacklisted() to resolveAndValidate() returning InetAddress,
  resolving all DNS records and rejecting if any address is private
- Use DNS-pinned connections to prevent TOCTOU rebinding attacks
- Handle relative redirect URLs via URI.resolve()
- Validate URL before auth checks in controller for correct 400/401 precedence
- Add SniSSLSocketFactory for HTTPS hostname verification with pinned IPs
- Add integration tests for scheme/userinfo/redirect security
- Add unit tests for resolveAndValidate() and validateUrl()